<resources>
    <string name="app_name">MyReminders</string>

    <!--Reminders Fragment-->

    <string name="fab_add_reminder">add_reminder</string>

    <!-- Add Reminder Fragment -->

    <string name="add_reminder_title">Title</string>
    <string name="select_date">Select Date</string>
    <string name="save">Save</string>
    <string name="input_date_format">MMM dd, yyyy</string>
    <string name="input_date_format_for_turkish">dd MMM yyyy</string>
    <string name="input_date_format_with_hours">dd/MM/yyyy/HH/mm/ss</string>
    <string name="output_date_format">dd/MM/yyyy</string>
    <string name="select_time">Select Time</string>
    <string name="reminder_title_not_be_empty">Reminder title not be empty</string>
    <string name="saved">Saved</string>
    <string name="name_saved">Name saved</string>
    <string name="select_event_time">Select Event Time</string>
    <string name="reminder_date_not_be_empty">Reminder date not be empty</string>
    <string name="reminder_time_not_be_empty">Reminder time not be empty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="no_data_found">No Data Found</string>
    <string name="close_button">close button</string>
    <string name="bell">bell</string>
    <string name="today_reminder">Today Reminder</string>
    <string name="select_category">Select Category</string>

    <string-array name="categories">
        <item>Work</item>
        <item>School</item>
        <item>Family</item>
        <item>Home</item>
        <item>Personal</item>
        <item>Friendship</item>
    </string-array>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="name">Name</string>
    <string name="you_have_no_reminders">"Today, you have no reminders."</string>
    <string name="you_are_free">You are free</string>


    <!-- Placeholders -->

    <string name="text_view_month_and_year">%1$s %2$s</string>
    <string name="today_you_have_x_reminders">Today you have %1$s reminders</string>
    <string name="you_have_x_reminders_today">You have %1$d reminders today</string>
    <string name="you_have_1_reminder_today">You have 1 reminder today</string>
    <string name="you_have_no_reminder_today">You have no reminder today</string>
    <string name="hello_x">Hello %1$s</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="myreminders">MyReminders</string>
    <string name="are_you_sure_you_want_to_close_this_app">Are you sure you want to close this app?</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="change_name">Change Name</string>
    <string name="this_reminder_has_expired">This reminder has expired!</string>

    <!--    Categories-->

    <string name="work">Work</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="home">Home</string>
    <string name="personal">Personal</string>
    <string name="friendship">Friendship</string>
    <string name="fun">Fun</string>
    <string name="other">Other</string>

    <!--    Onboarding-->

    <string name="let_s_start">Let\'s start</string>

    <!--    Alert Dialog-->
    <string name="delete_reminder">Delete Reminder</string>
    <string name="do_you_wanna_delete_it">Do you want to delete it?</string>
    <string name="reminder_updated">Reminder Updated</string>
    <string name="reminder_deleted">Reminder Deleted</string>

    <!--    XML-->
    <string name="reminder_detail">Reminder Detail</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="_08">08</string>
    <string name="test_date">Feb 22</string>
    <string name="semicolon">:</string>
    <string name="category_photo">category_photo</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="choose_category">Choose Category</string>
    <string name="we_want_to_know_your_name">We want to know your name</string>
    <string name="hello_test">Hello Hamza</string>
    <string name="today_you_have_6_reminders">Today, you have 6 reminders</string>
    <string name="complete_the_task">Complete the task</string>
    <string name="color">Color</string>
    <string name="back_arrow">back arrow</string>


</resources>