<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.canbazdev.myreminders.ui.main.RemindersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.RemindersFragment">

        <TextView
            android:id="@+id/noDataFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            android:translationZ="1dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pbLoadingData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/cvRemindersTopArea"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:maxHeight="200dp"
            android:minHeight="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_reminders_top_gradient">

                <TextView
                    android:id="@+id/tv_hello_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/rubik2"
                    android:text="Hello Hamza"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_today_reminder_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_2dp"
                    android:fontFamily="@font/rubik3"
                    android:text="Today, you have 6 reminders"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_hello_name" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"
                    android:background="@drawable/background_today_reminder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/tv_today_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:fontFamily="@font/rubik3"
                        android:text="Today Reminder"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_today_reminder_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_2dp"
                        android:fontFamily="@font/rubik3"
                        android:text="Complete the task"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_today_reminder" />

                    <TextView
                        android:id="@+id/tv_today_reminder_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:layout_marginTop="@dimen/margin_2dp"
                        android:fontFamily="@font/rubik3"
                        android:text="13:10 pm"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_today_reminder_title" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:layout_marginBottom="@dimen/margin_16dp"
                        android:contentDescription="@string/bell"
                        android:paddingTop="@dimen/margin_8dp"
                        android:paddingBottom="@dimen/margin_8dp"
                        android:src="@drawable/bell"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_close_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_close_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4dp"
                        android:layout_marginEnd="@dimen/margin_4dp"
                        android:contentDescription="@string/close_button"
                        android:src="@drawable/ic_baseline_close_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reminders"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvRemindersTopArea"
            tools:itemCount="10"
            tools:listitem="@layout/item_reminder" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_go_to_add_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/fab_add_reminder"
            android:src="@drawable/ic_add_32dp"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>