<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.canbazdev.myreminders.ui.main.RemindersViewModel" />

        <variable
            name="reminder"
            type="com.canbazdev.myreminders.model.Reminder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_16dp"
        tools:context=".ui.add_reminder.AddReminderFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik3"
                android:hint="@string/add_reminder_title"
                android:text="@={reminder.title}"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_date_picker"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:layout_constraintEnd_toStartOf="@id/cl_time_picker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_title">

            <View
                android:id="@+id/v_date_top_view"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/background_date_time_pick_top_view"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_select_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background_date_time_pick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_date_top_view">

                <TextView
                    android:id="@+id/tv_date_day"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:text="08"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tv_date_year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_date_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:fontFamily="@font/rubik2"
                    android:gravity="center"
                    android:text="Feb 22"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date_day" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        <Button-->
        <!--            android:id="@+id/btn_select_date"-->
        <!--            style="@style/borderButton"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/dp64"-->
        <!--            android:layout_marginTop="@dimen/margin_16dp"-->
        <!--            android:hint="@string/select_date"-->
        <!--            android:textAlignment="textStart"-->
        <!--            android:textColorHint="@color/hint_color"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/til_title"-->
        <!--            app:strokeColor="@color/primary_light" />-->

        <!--        <Button-->
        <!--            android:id="@+id/btn_select_time"-->
        <!--            style="@style/borderButton"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/dp64"-->
        <!--            android:layout_marginTop="@dimen/margin_16dp"-->
        <!--            android:hint="@string/select_time"-->
        <!--            android:textAlignment="textStart"-->
        <!--            android:textColorHint="@color/hint_color"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/btn_select_date"-->
        <!--            app:strokeColor="@color/primary_light" />-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_time_picker"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cl_date_picker"
            app:layout_constraintTop_toBottomOf="@id/til_title">

            <View
                android:id="@+id/v_time_top_view"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/background_date_time_pick_top_view"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background_date_time_pick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_time_top_view">

                <TextView
                    android:id="@+id/tv_time_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rubik2"
                    android:gravity="center"
                    android:text="13"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_time_between"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_time_between"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik2"
                    android:gravity="center"
                    android:layout_marginBottom="4dp"
                    android:text=":"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_time_hour"
                    app:layout_constraintEnd_toStartOf="@id/tv_time_minute"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_time_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rubik2"
                    android:gravity="center"
                    android:text="32"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_time_between"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btnSaveReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:text="@string/update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnDeleteReminder"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnDeleteReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSaveReminder" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>